test ok jusqu'à avant la matrice de Cramer ==> bug

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -4,16 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Utilisation du module functions"
+    "# Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mlops_functions import functions"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "from fanalysis.mca import MCA\n",
+    "from scipy.stats import chi2_contingency\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utilisation du module functions"
    ]
   },
   {
@@ -25,20 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lecture du fichier\n",
+    "from mlops_functions.functions import load_data\n",
     "\n",
     "# Louise\n",
-    "base = functions.load_data(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
+    "#base = functions.load_data(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
     "# Cyrielle\n",
-    "base = functions.load_data(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
-    "\n",
-    "#base =  pd.read_csv(\"C:/Users/Cyrie/OneDrive/Bureau/M2_DS/S1/MLOPS/Rendu_MLOPS/athlete_events.csv\")  \n",
-    "#base = pd.read_csv(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
-    "#base = pd.read_csv(\"//ad.univ-lille.fr/Etudiants/Homedir3/147794/Documents/M2/Rendu_MLOPS/athlete_events.csv\")\n"
+    "base = functions.load_data(\"/Users/Cyrie/OneDrive/Bureau/M2_DS/S1/MLOPS/Rendu_MLOPS/athlete_events.csv\")\n"
    ]
   },
   {
@@ -50,30 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre de lignes : 222552\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from mlops_functions.functions import filter_summer_season\n",
     "# Filtre sur la saison d'été\n",
-    "base_summer = functions.filter_summer_season(base)\n",
-    "\n",
-    "\n",
-    "#filtre sur Summer\n",
-    "#base_summer = base[base['Season'] == 'Summer']\n",
-    "\n",
-    "#nombre de ligne de notre df base après filtre du df base summer\n",
-    "#nombre_de_lignes1 = base_summer.shape[0]\n",
-    "\n",
-    "#affiche le nombre de lignes du df base summer 2000\n",
-    "#print(\"Nombre de lignes :\", nombre_de_lignes1)"
+    "base_summer = functions.filter_summer_season(base)\n"
    ]
   },
   {
@@ -217,6 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import create_age_classes, create_height_classes, create_weight_classes\n",
+    "\n",
     "# Création des classes d'âge\n",
     "age_classes = create_age_classes(base_summer)\n",
     "print(age_classes.head(5))\n",
@@ -281,19 +282,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import filter_by_year\n",
+    "\n",
     "# Filtrer sur l'année supérieure ou égale à 2000\n",
     "base_summer_2000 = filter_by_year(base_summer)\n",
-    "print(base_summer_2000.head())\n",
-    "\n",
-    "\n",
-    "#filtre sur l annee sup ou egal a 2000\n",
-    "#base_summer_2000 = base_summer[base_summer['Year'] >= 2000]\n",
-    "\n",
-    "#nombre de ligne de notre df base après filtre du df base summer 2000\n",
-    "#nombre_de_lignes2 = base_summer_2000.shape[0]\n",
-    "\n",
-    "#affiche le nombre de lignes du df base summer 2000\n",
-    "#print(\"Nombre de lignes :\", nombre_de_lignes2)"
+    "print(base_summer_2000.head())"
    ]
   },
   {
@@ -302,6 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import drop_columns\n",
     "\n",
     "# Filtrer sur l'année supérieure ou égale à 2000\n",
     "base_summer_2000 = filter_by_year(base_summer)\n",
@@ -312,14 +306,7 @@
     "columns_to_drop = ['Team', 'Season', 'Age', 'Height', 'Weight']\n",
     "base_summer_2000 = drop_columns(base_summer_2000, columns_to_drop)\n",
     "print(\"\\nAprès suppression des colonnes :\")\n",
-    "print(base_summer_2000.head())\n",
-    "\n",
-    "\n",
-    "# Supprimer les variables 'Team' et 'Season' du DataFrame base_summer_2000\n",
-    "#base_summer_2000 = base_summer_2000.drop(['Team', 'Season','Age','Height','Weight'], axis=1)\n",
-    "\n",
-    "# Afficher les premières lignes du DataFrame après la suppression\n",
-    "#print(base_summer_2000.head())"
+    "print(base_summer_2000.head())\n"
    ]
   },
   {
@@ -335,20 +322,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import display_missing_values\n",
+    "\n",
     "# Filtrer sur l'année supérieure ou égale à 2000\n",
     "base_summer_2000 = filter_by_year(base_summer)\n",
     "print(\"Avant suppression des colonnes :\")\n",
     "print(base_summer_2000.head())\n",
     "\n",
     "# Calculer et afficher les valeurs manquantes\n",
-    "display_missing_values(base_summer_2000)\n",
-    "\n",
-    "\n",
-    "#valeurs manquantes pour le df base summer 2000\n",
-    "#valeurs_manquantes_par_variable2 = base_summer_2000.isnull().sum()\n",
-    "\n",
-    "# Affichage du résultat pour le df base \n",
-    "#print(valeurs_manquantes_par_variable2)\n"
+    "valeurs_manquantes_par_variable2 = display_missing_values(base_summer_2000)\n"
    ]
   },
   {
@@ -357,6 +339,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import drop_missing_values\n",
+    "\n",
     "# Filtrer sur l'année supérieure ou égale à 2000\n",
     "base_summer_2000 = filter_by_year(base_summer)\n",
     "print(\"Avant suppression des colonnes :\")\n",
@@ -366,12 +350,7 @@
     "columns_to_check = ['Classe_age', 'Classe_height', 'Classe_weight']\n",
     "base_summer_2000_net = drop_missing_values(base_summer_2000, columns_to_check)\n",
     "print(\"\\nAprès suppression des valeurs manquantes :\")\n",
-    "print(base_summer_2000_net.head())\n",
-    "\n",
-    "\n",
-    "# suppression des valeurs manquantes \n",
-    "#base_summer_2000_net = base_summer_2000.dropna(subset=['Classe_age','Classe_height','Classe_weight'])\n",
-    "#base_summer_2000_net.isnull().sum()"
+    "print(base_summer_2000_net.head())"
    ]
   },
   {
