--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,10 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import calculate_cramer_v, plot_cramer_matrix\n",
+    "\n",
     "# Calculez le V de Cramer et affichez la matrice de corrélation\n",
     "cramer_matrix = calculate_cramer_v(base_summer_2000_net, categorical_vars)\n",
     "plot_cramer_matrix(cramer_matrix)\n",
@@ -662,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,304 +677,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mlops_functions.functions import transform_base_ACM\n",
+    "\n",
     "base_ACM = transform_base_ACM(base_summer_2000_net)\n",
     "\n",
     "# Affichage des colonnes après transformation\n",
     "print(base_ACM.columns)\n",
-    "\n",
-    "#base_ACM['Sport'].replace({\n",
-    "#\n",
-    "#'Judo'\t: 'Combat' ,\n",
-    "#'Wrestling'\t: 'Combat' ,\n",
-    "#'Taekwondo'\t: 'Combat' ,\n",
-    "#'Fencing'\t: 'Combat' ,\n",
-    "#'Boxing'\t: 'Combat' ,\n",
-    "#'Badminton'\t:'Raquette',\n",
-    "#'Tennis'\t:'Raquette',\n",
-    "#'Table Tennis'\t:'Raquette',\n",
-    "#'Swimming'\t: 'Natation',\n",
-    "#'Synchronized Swimming'\t: 'Natation',\n",
-    "#'Basketball'\t: 'Sport collectif',\n",
-    "#'Handball'\t: 'Sport collectif',\n",
-    "#'Football'\t: 'Sport collectif',\n",
-    "#'Hockey'\t: 'Sport collectif',\n",
-    "#'Water Polo'\t: 'Sport collectif',\n",
-    "#'Softball'\t: 'Sport collectif',\n",
-    "#'Volleyball'\t: 'Sport collectif',\n",
-    "#'Baseball'\t: 'Sport collectif',\n",
-    "#'Rugby Sevens'\t: 'Sport collectif',\n",
-    "#'Beach Volleyball'\t: 'Sport collectif',\n",
-    "#'Athletics'\t:'Athlétisme',\n",
-    "#'Modern Pentathlon'\t:'Athlétisme',\n",
-    "#'Triathlon'\t:'Athlétisme',\n",
-    "#'Gymnastics'\t:'Gymnastique',\n",
-    "#'Rhythmic Gymnastics'\t:'Gymnastique',\n",
-    "#'Trampolining'\t:'Gymnastique',\n",
-    "#'Sailing'\t:\"Sur l'eau\",\n",
-    "#'Rowing'\t:\"Sur l'eau\",\n",
-    "#'Diving'\t:\"Sur l'eau\",\n",
-    "#'Canoeing'\t:\"Sur l'eau\",\n",
-    "#'Weightlifting'\t:'Autres sports',\n",
-    "#'Cycling'\t:'Autres sports',\n",
-    "#'Equestrianism'\t:'Autres sports',\n",
-    "#'Archery'\t:'Autres sports',\n",
-    "#'Shooting'\t:'Autres sports',\n",
-    "#'Golf'\t:'Autres sports'\n",
-    "#}, inplace=True)\n",
-    "\n",
-    "#base_ACM['Sport'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#base_ACM['NOC'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#base_ACM['NOC'].replace({\n",
-    "#'CHN': 'Asie',\n",
-    "#'FIN': 'Europe',\n",
-    "#'ROU': 'Europe',\n",
-    "#'NOR': 'Europe',\n",
-    "#'NED': 'Europe',\n",
-    "#'FRA': 'Europe',\n",
-    "#'EST': 'Europe',\n",
-    "#'ESP': 'Europe',\n",
-    "#'EGY': 'Afrique',\n",
-    "#'ITA': 'Europe',\n",
-    "#'AZE': 'Asie',\n",
-    "#'RUS': 'Europe',\n",
-    "#'ARG': 'Amérique du Sud',\n",
-    "#'CUB': 'Amérique du Nord',\n",
-    "#'BLR': 'Europe',\n",
-    "#'GRE': 'Europe',\n",
-    "#'CMR': 'Afrique',\n",
-    "#'MEX': 'Amérique du Nord',\n",
-    "#'USA': 'Amérique du Nord',\n",
-    "#'NCA': 'Amérique centrale',\n",
-    "#'ALG': 'Afrique',\n",
-    "#'BRN': 'Asie',\n",
-    "#'IRQ': 'Asie',\n",
-    "#'QAT': 'Asie',\n",
-    "#'PAK': 'Asie',\n",
-    "#'IRI': 'Asie',\n",
-    "#'CAN': 'Amérique du Nord',\n",
-    "#'IRL': 'Europe',\n",
-    "#'AUS': 'Océanie',\n",
-    "#'RSA': 'Afrique',\n",
-    "#'MAR': 'Afrique',\n",
-    "#'ERI': 'Afrique',\n",
-    "#'SUD': 'Afrique',\n",
-    "#'BEL': 'Europe',\n",
-    "#'KAZ': 'Asie',\n",
-    "#'BRU': 'Asie',\n",
-    "#'KUW': 'Asie',\n",
-    "#'MAS': 'Asie',\n",
-    "#'INA': 'Asie',\n",
-    "#'UZB': 'Asie',\n",
-    "#'UAE': 'Asie',\n",
-    "#'KGZ': 'Asie',\n",
-    "#'TJK': 'Asie',\n",
-    "#'JPN': 'Asie',\n",
-    "#'GER': 'Europe',\n",
-    "#'ETH': 'Afrique',\n",
-    "#'TUR': 'Asie',\n",
-    "#'SRI': 'Asie',\n",
-    "#'ARM': 'Asie',\n",
-    "#'CIV': 'Afrique',\n",
-    "#'KEN': 'Afrique',\n",
-    "#'NGR': 'Afrique',\n",
-    "#'BRA': 'Amérique du Sud',\n",
-    "#'SYR': 'Asie',\n",
-    "#'CHI': 'Amérique du Sud',\n",
-    "#'SUI': 'Europe',\n",
-    "#'SWE': 'Europe',\n",
-    "#'GUY': 'Amérique du Sud',\n",
-    "#'GEO': 'Asie',\n",
-    "#'POR': 'Europe',\n",
-    "#'ANG': 'Afrique',\n",
-    "#'COL': 'Amérique du Sud',\n",
-    "#'DJI': 'Afrique',\n",
-    "#'BAN': 'Asie',\n",
-    "#'JOR': 'Asie',\n",
-    "#'PLE': 'Asie',\n",
-    "#'SOM': 'Afrique',\n",
-    "#'KSA': 'Asie',\n",
-    "#'VEN': 'Amérique du Sud',\n",
-    "#'IND': 'Asie',\n",
-    "#'GBR': 'Europe',\n",
-    "#'GHA': 'Afrique',\n",
-    "#'UGA': 'Afrique',\n",
-    "#'TUN': 'Afrique',\n",
-    "#'SLO': 'Europe',\n",
-    "#'HON': 'Amérique centrale',\n",
-    "#'TKM': 'Asie',\n",
-    "#'MRI': 'Afrique',\n",
-    "#'POL': 'Europe',\n",
-    "#'NIG': 'Afrique',\n",
-    "#'SKN': 'Amérique du Nord',\n",
-    "#'NZL': 'Océanie',\n",
-    "#'LBR': 'Afrique',\n",
-    "#'SUR': 'Amérique du Sud',\n",
-    "#'NEP': 'Asie',\n",
-    "#'LBA': 'Afrique',\n",
-    "#'MGL': 'Asie',\n",
-    "#'PLW': 'Océanie',\n",
-    "#'LTU': 'Europe',\n",
-    "#'NAM': 'Afrique',\n",
-    "#'UKR': 'Europe',\n",
-    "#'ASA': 'Océanie',\n",
-    "#'PUR': 'Amérique du Nord',\n",
-    "#'SAM': 'Océanie',\n",
-    "#'RWA': 'Afrique',\n",
-    "#'CRO': 'Europe',\n",
-    "#'DMA': 'Amérique du Nord',\n",
-    "#'DEN': 'Europe',\n",
-    "#'MLT': 'Europe',\n",
-    "#'AUT': 'Europe',\n",
-    "#'SEY': 'Afrique',\n",
-    "#'DOM': 'Amérique du Nord',\n",
-    "#'BIZ': 'Amérique centrale',\n",
-    "#'PAR': 'Amérique du Sud',\n",
-    "#'URU': 'Amérique du Sud',\n",
-    "#'COM': 'Afrique',\n",
-    "#'MDV': 'Asie',\n",
-    "#'BEN': 'Afrique',\n",
-    "#'TTO': 'Amérique du Nord',\n",
-    "#'SGP': 'Asie',\n",
-    "#'PER': 'Amérique du Sud',\n",
-    "#'BER': 'Amérique du Nord',\n",
-    "#'SCG': 'Europe',\n",
-    "#'HUN': 'Europe',\n",
-    "#'CYP': 'Europe',\n",
-    "#'YEM': 'Asie',\n",
-    "#'LIB': 'Afrique',\n",
-    "#'OMA': 'Asie',\n",
-    "#'IOA': 'Océanie',\n",
-    "#'FIJ': 'Océanie',\n",
-    "#'VAN': 'Océanie',\n",
-    "#'JAM': 'Amérique du Nord',\n",
-    "#'MDA': 'Europe',\n",
-    "#'GUA': 'Amérique centrale',\n",
-    "#'BUL': 'Europe',\n",
-    "#'LAT': 'Europe',\n",
-    "#'SRB': 'Europe',\n",
-    "#'IVB': 'Amérique du Nord',\n",
-    "#'VIN': 'Amérique centrale',\n",
-    "#'ISL': 'Europe',\n",
-    "#'CRC': 'Amérique centrale',\n",
-    "#'ESA': 'Amérique centrale',\n",
-    "#'CAF': 'Afrique',\n",
-    "#'MAD': 'Afrique',\n",
-    "#'CHA': 'Afrique',\n",
-    "#'BIH': 'Europe',\n",
-    "#'GUM': 'Océanie',\n",
-    "#'PHI': 'Asie',\n",
-    "#'CAY': 'Amérique du Nord',\n",
-    "#'SVK': 'Europe',\n",
-    "#'BAR': 'Amérique du Nord',\n",
-    "#'ECU': 'Amérique du Sud',\n",
-    "#'PAN': 'Amérique centrale',\n",
-    "#'TLS': 'Asie',\n",
-    "#'GAB': 'Afrique',\n",
-    "#'BAH': 'Amérique du Nord',\n",
-    "#'SMR': 'Europe',\n",
-    "#'ISR': 'Asie',\n",
-    "#'THA': 'Asie',\n",
-    "#'BOT': 'Afrique',\n",
-    "#'ROT': 'Océanie',\n",
-    "#'KOR': 'Asie',\n",
-    "#'PRK': 'Asie',\n",
-    "#'MOZ': 'Afrique',\n",
-    "#'CPV': 'Afrique',\n",
-    "#'CZE': 'Europe',\n",
-    "#'LAO': 'Asie',\n",
-    "#'LUX': 'Europe',\n",
-    "#'AND': 'Europe',\n",
-    "#'ZIM': 'Afrique',\n",
-    "#'GRN': 'Amérique du Nord',\n",
-    "#'HKG': 'Asie',\n",
-    "#'LCA': 'Amérique du Nord',\n",
-    "#'HAI': 'Amérique du Nord',\n",
-    "#'FSM': 'Océanie',\n",
-    "#'MYA': 'Asie',\n",
-    "#'AFG': 'Asie',\n",
-    "#'SEN': 'Afrique',\n",
-    "#'MTN': 'Afrique',\n",
-    "#'COD': 'Afrique',\n",
-    "#'GUI': 'Afrique',\n",
-    "#'ANT': 'Amérique du Nord',\n",
-    "#'CGO': 'Afrique',\n",
-    "#'MKD': 'Europe',\n",
-    "#'BOL': 'Amérique du Sud',\n",
-    "#'TOG': 'Afrique',\n",
-    "#'SLE': 'Afrique',\n",
-    "#'MON': 'Europe',\n",
-    "#'GEQ': 'Afrique',\n",
-    "#'MNE': 'Europe',\n",
-    "#'ISV': 'Amérique du Nord',\n",
-    "#'PNG': 'Océanie',\n",
-    "#'TAN': 'Afrique',\n",
-    "#'COK': 'Océanie',\n",
-    "#'ALB': 'Europe',\n",
-    "#'MLI': 'Afrique',\n",
-    "#'SWZ': 'Afrique',\n",
-    "#'BDI': 'Afrique',\n",
-    "#'ARU': 'Amérique du Sud',\n",
-    "#'STP': 'Afrique',\n",
-    "#'NRU': 'Océanie',\n",
-    "#'GBS': 'Afrique',\n",
-    "#'ZAM': 'Afrique',\n",
-    "#'TPE': 'Asie',\n",
-    "#'CAM': 'Amérique centrale',\n",
-    "#'MAW': 'Afrique',\n",
-    "#'BHU': 'Asie',\n",
-    "#'VIE': 'Asie',\n",
-    "#'GAM': 'Afrique',\n",
-    "#'MHL': 'Océanie',\n",
-    "#'AHO': 'Océanie',\n",
-    "#'KIR': 'Océanie',\n",
-    "#'TUV': 'Océanie',\n",
-    "#'TGA': 'Océanie',\n",
-    "#'LIE': 'Europe',\n",
-    "#'KOS': 'Europe',\n",
-    "#'SOL': 'Océanie',\n",
-    "#'SSD': 'Afrique',\n",
-    "#'LES': 'Afrique',\n",
-    "#'BUR': 'Afrique',\n",
-    "#}, inplace=True)\n",
-    "\n",
-    "#base_ACM['NOC'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(base_ACM.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# suppresion des variables inutile pour la suite de l'analyse\n",
-    "\n",
-    "#base_ACM = base_ACM.drop(['ID', 'Name','Games', 'Year','City','Event'], axis=1)\n",
-    "#print(base_ACM.columns)"
+    "print(base_ACM).head()"
    ]
   },
   {
@@ -989,7 +700,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analyze_acm(base_ACM)\n",
+    "from mlops_functions.functions import analyze_acm\n",
+    "\n",
+    "base_ACM = analyze_acm(base_ACM)\n",
     "#remplacer les valeurs manquantes de la variable cibe par \"pas de médaille\"\n",
     "#base_ACM['Medal'].fillna('Pas_de_médaille', inplace=True)\n",
     "#print(base_ACM)\n"
