dernier controle et depot du rapport

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -63,12 +63,12 @@
     "\n",
     "# Louise\n",
     "#base = functions.load_data(\"//ad.univ-lille.fr/Etudiants/Homedir3/147794/Documents/M2/Rendu_MLOPS/athlete_events.csv\")\n",
-    "base = functions.load_data(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
+    "#base = functions.load_data(\"/Users/lepercqlouise/stockage_macBook/Rendu_MLOPS/athlete_events.csv\")\n",
     "\n",
     "\n",
     "\n",
     "# Cyrielle\n",
-    "#base = functions.load_data(\"/Users/Cyrie/OneDrive/Bureau/M2_DS/S1/MLOPS/Rendu_MLOPS/athlete_events.csv\")\n"
+    "base = functions.load_data(\"/Users/Cyrie/OneDrive/Bureau/M2_DS/S1/MLOPS/Rendu_MLOPS/athlete_events.csv\")\n"
    ]
   },
   {
@@ -1265,12 +1265,11 @@
     }
    ],
    "source": [
+    "# Nous ne comprenons pas l'erreur de cette fonction, nous avons mis le code de l'ACM ci-dessous en commentaire qui fonctionne \n",
     "from mlops_functions.functions import analyze_acm\n",
     "\n",
     "base_ACM = analyze_acm(base_ACM)\n",
-    "#remplacer les valeurs manquantes de la variable cibe par \"pas de médaille\"\n",
-    "#base_ACM['Medal'].fillna('Pas_de_médaille', inplace=True)\n",
-    "#print(base_ACM)\n"
+    "\n"
    ]
   },
   {
